--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "assets/files/nahida.jpg"
   name             : "Yang He"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Student in Programming Language"
